# omnitalk

./: .gitignore  LICENSE  README.md
.github/workflows/: idf.yml  test-runner.yml  tests.yml
omnitalk/: CMakeLists.txt  sdkconfig
omnitalk/.github/workflows/: idf.yml
omnitalk/doc/: 01_Transport_and_LAP.md  02_Lifetime_of_a_packet_buffer.md  03_Tests.md
omnitalk/main/: CMakeLists.txt  controlplane_runloop.c  controlplane_runloop.h  ddp_send.c  ddp_send.h  global_state.c  global_state.h  hw.h  main.c  mktests.pl  report_on_tests.pl  router_runloop.c  router_runloop.h  runloop.c  runloop.h  runloop_types.h  test.c  test.h  test.inc  test.inc.h  tunables.h
omnitalk/main/app/: app.c  app.h
omnitalk/main/app/aep/: aep.c  aep.h
omnitalk/main/app/nbp/: nbp.c  nbp.h
omnitalk/main/app/rtmp/: rtmp.c  rtmp.h
omnitalk/main/app/sip/: sip.c  sip.h
omnitalk/main/app/zip/: zip.c  zip.h  zip_get_network_info.c  zip_get_network_info_test.c  zip_get_network_info_test.h  zip_get_zone_list.c  zip_internal.h  zip_test.c  zip_test.h
omnitalk/main/lap/: id.c  id.h  lap.c  lap.h  lap_test.c  lap_test.h  lap_types.h  registry.c  registry.h  registry_test.c  registry_test.h
omnitalk/main/lap/llap/: llap.c  llap.h  llap_test.c  llap_test.h
omnitalk/main/lap/sink/: sink.c  sink.h
omnitalk/main/lap/skel/: llap.h
omnitalk/main/mem/: buffers.c  buffers.h  buffers_test.c  buffers_test.h
omnitalk/main/net/: chain.h  common.c  common.h  ethernet.c  ethernet.h  ethernet_output.c  ethernet_output.h  mdns.c  mdns.h  net.c  net.h  transport.c  transport.h  transport_types.h
omnitalk/main/net/b2udptunnel/: b2udptunnel.c  b2udptunnel.h
omnitalk/main/net/ethernet/: ethernet.c  ethernet.h  ethernet_output.c
omnitalk/main/net/ltoudp/: ltoudp.c  ltoudp.h
omnitalk/main/net/tashtalk/: state_machine.c  state_machine.h  tashtalk.c  tashtalk.h  uart.c  uart.h
omnitalk/main/proto/: SNAP.h  atp.c  atp.h  atp_test.c  atp_test.h  ddp.h  ddp_test.c  ddp_test.h  llap.h  nbp.c  nbp.h  nbp_test.c  nbp_test.h  rtmp.c  rtmp.h  sip.h  zip.c  zip.h  zip_test.c  zip_test.h
omnitalk/main/table/aarp/: table.c  table.h  table_test.c  table_test.h
omnitalk/main/table/routing/: route.h  table.h  table_impl.c  table_impl.h  table_test.c  table_test.h
omnitalk/main/table/zip/: table.h  table_impl.c  table_impl.h  table_test.c  table_test.h
omnitalk/main/util/: crc.c  crc32.c  macroman.c  macroman.h  macroman_test.c  macroman_test.h  macroman_to_utf8_tables.c  pstring.c  pstring.h  pstring_test.c  pstring_test.h  string.c  string.h
omnitalk/main/util/event/: event.c  event.h  event_test.c  event_test.h
omnitalk/main/util/require/: goto.h
omnitalk/main/web/: metadata.inc  mkmetadata.pl  mkstats.pl  stats.c  stats.h  stats.inc  stats_memory.c  stats_memory.h  util.c  util.h  web.c  web.h
tools/macroman/: go.mod  macroman.txt  makeMacRomanLUT.go
